inventory_mgmt/inventory/static/css/style.css
.homePage {
    font-weight: bold;
    height: 150px;
}

.height {
    height: 150px;
}

.homepage span {
    margin-top: 20px;
}

.homePage > img{
    opacity: 0.5;
    transition: .5s ease;
    backface-visibility: hidden;
}

.middle {
    transition: .3s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
  }

.homePage:hover .middle {
    opacity: 1;
}

.homePage:hover > img {
    opacity: 0.3;
}

.homePage a{
    font-weight: bold; 
    color: black; 
    font-family: 'Raleway';
}

.homePage a:hover {
    color: rgb(21, 33, 51);
}

.text {
    background-color:rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    font-size: 16px;
    padding: 16px 32px;
  }

  tr, td {
      font-family: 'Raleway';
  }


thead {
    background-color: rgb(41, 54, 66);
    color: white;
    font-family: Montserrat!important;
}


h1, h2 {
    font-family: Raleway;
}

.food {
    color: white;
    margin: 10px;
}

#wrapper1 {
    display: flex; 
    flex-wrap: wrap; 
    justify-content: space-evenly; 
    align-items: center;
}

.cust {
    position: relative; 
    top: 50%; 
    left: 50%; 
    margin-right: -50%; 
    transform: translate(-50%, -50%);
}

.cust > a {
    color: white;
}

.custContainer {
    color: white;
    font-family: 'Raleway'; 
    margin: 15px; 
    height: 150px; 
    width: 150px;
}

#myBtn {
    display: none; /* Hidden by default */
    position: fixed; /* Fixed/sticky position */
    bottom: 20px; /* Place the button at the bottom of the page */
    right: 30px; /* Place the button 30px from the right */
    z-index: 99; /* Make sure it does not overlap */
    border: none; /* Remove borders */
    outline: none; /* Remove outline */
    background-color: rgb(21, 33, 51); /* Set a background color */
    color: white; /* Text color */
    cursor: pointer; /* Add a mouse pointer on hover */
    padding: 15px; /* Some padding */
    border-radius: 10px; /* Rounded corners */
    font-size: 18px; /* Increase font size */
  }
  
  #myBtn:hover {
    background-color: dodgerblue;
  }

  #index .card-header{
      display: none;
  }
/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

/* Portrait and Landscape */
@media only screen 
and (min-device-width: 375px) 
and (max-device-width: 667px) 
and (-webkit-min-device-pixel-ratio: 2) { 
    .card-columns > .card{
        width: 45%;
        display: inline-block;
        justify-content: space-evenly; 
        margin: 5px;
    }


    #index span {
        transform: scale(0.5);
        margin-top: 40px;
    }

}

/* ----------- iPhone X ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 812px) 
  and (-webkit-min-device-pixel-ratio: 3) { 
    .card-columns > .card{
        width: 45%;
        display: inline-block;
        justify-content: space-around; 
    }
}


span > span h2 {
    font-family: 'Raleway';
}


.reports button h2 {
    font-family: 'Raleway';
    font-weight: bold;
    color: black;
}

.reports li {
    font-size: 1.3rem;
}

